--- a/user/logged.html
+++ b/user/logged.html
@@ -1,21 +1,21 @@
 <html>
   <head>
-	
+
 	<meta id="token" name="token" data-content="this is token" />
-  
-  
+
+
     <link rel="stylesheet" href="main.css">
 	<script src="ajax.js"></script>
-    <script src="main.js"></script>
 	<script src="status.js"></script>
   </head>
-  <body>
+
+  <body onload="resizeArticle()" onresize="resizeArticle()" >
 
     <header>
       <div id="logo"></div>
       <div id="logoInfo">ALUMNI PORTAL <span>NIT Arunachal Pradesh</span> </div>
       <div id="bell"></div>
-      <div id="user"></div>
+      <div id="userProfile"></div>
       <div id="arrow" onclick="hideShow()" data-value="1"></div>
 
       <div id="arrowOption">
@@ -24,6 +24,60 @@
 
     </header>
 
+    <nav>
+      <ul>
+        <li id="navoption1" onclick="hideShowSections(1)" style="background:black;"></li>
+        <li id="navoption2" onclick="hideShowSections(2)"></li>
+        <li id="navoption3" onclick="hideShowSections(3)"></li>
+      </ul>
+    </nav>
+
+    <article id="articleContent">
+
+      <section id="articleSection1" style="background:green;display:none;"></section>
+
+      <section id="articleSection2" style="display:block;">
+
+        <div id="groupAside">
+
+          <div class="groupAsideSectionDes">Groups :</div>
+          <div class="groupAsideSection" id="groupAsideSection1">
+
+
+          </div>
+
+          <div class="groupAsideSectionDes">Personal :</div>
+          <div class="groupAsideSection" id="groupAsideSection2">
+
+          </div>
+
+        </div>
+
+        <div id="chatBox">
+
+          <div id="chatContainer">
+
+
+
+          </div>
+
+          <div id="inputEmoji">
+          </div>
+
+          <div id="chatInput">
+
+            <input id="inputArea" placeholder="Aa" type="text"/>
+            <div id="inputEmojiButton" data-value="1" onclick="hideShowEmoji()"></div>
+            <div id="sendButton"></div>
+          </div>
+        </div>
+
+      </section>
+
+      <section id="articleSection3" style="background:red"></section>
+
+    </article>
+
     <footer>
       © Copyright 2023 by NIT Arunachal Pradesh, All Rights Reserved. Developed by
       <span style="color:green;">Akrati Singh, Liton Barman, Satyam</span>
@@ -31,14 +85,17 @@
     </footer>
   </body>
   <script>
-  
-  
+
+
+
+
 	var temp = document.getElementById('token').getAttribute('data-content');
-	
+
 	console.log(temp);
-  
+
     //var s = new statusManager();
 	//s.init();
 
   </script>
+  <script src="main.js"></script>
 </html>
