--- a/register.html
+++ b/register.html
@@ -1,5 +1,16 @@
 <html>
   <head>
+
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+
+    <script src="user/ajax.js" id="testHide1"></script>
+    <script src="encodeCred.js" id="testHide2"></script>
+
+
+    <link rel="icon" href="img/titlelogo.png" type="image/x-icon"/>
+    <link rel="stylesheet" href="main.css" />
+
     <title>Registration Alumni Prtal</title>
     <style>
       body{
@@ -7,6 +18,7 @@
       }
       page{
         position:absolute;
+        top:230px;
         background: white;
         display: block;
         margin: 0 auto;
@@ -34,29 +46,226 @@
         position:absolute;
         left:6%;
       }
+      label{
+        position:absolute;
+        left:6%;
+        top: 100px;width: max-content;
+      }
+      input{
+        position:absolute;
+        left:6%;
+        top: 100px;border: none;
+        border-bottom: 2px dotted black;
+        outline:none;
+      }
     </style>
   </head>
   <body id="main">
 
-    <button onclick="pdfNow()">Print</button>
+    <header>
+
+       <img id="header-logo1" src="img/logo.png" height=90 />
+       <div id="header-logo2">
+         <h1 style="color:rgb(36,120,182);font-weight:bolder;margin-bottom:6px;">ALUMNI PORTAL</h1>
+         <h3 style="color:rgb(121,119,120);">NIT Arunachal Pradesh</h3>
+       </div>
+
+    </header>
+
+   <nav>
+     <ul id="options">
+       <a href="index.php"><li onclick="goToHome()">Home</li></a>
+     </ul>
+
+     <img src="img/setting.png" height=30 id="setting" />
+
+   </nav>
+
+    <button onclick="pdfNow()" style="position:absolute;top:225px;">Print</button>
 
     <page size="A4" id="myform">
       <div id="mainHead">
-        <img src="img/logo.png" height=100 style="position:absolute;top:40px;left:40px;" />
-        NATIONAL INSTITUTE OF TECHNOLOGY<br/>ARUNACHAL PRADESH, JOTE, PIN-791113<br/>(Established by MHRD, Govt. of India)
-        <img src="img/user.png" onclick="makeImgFocus()" id="user" height=100 width=100 style="position:absolute;top:40px;right:40px;border:1px solid #000;" />
-        <input type="file" id="userFileInput" accept="image/png, image/jpeg" onchange="assignImage(event)" style="display:none;position:absolute;top:40px;right:40px;width:1px;" />
-      </div>
+        <img src="img/logo.png" height=100 alt=""
+          style="position:absolute;top:40px;left:40px;" />NATIONAL INSTITUTE OF
+        TECHNOLOGY<br/>ARUNACHAL PRADESH, JOTE, PIN-791113<br/>(Established by
+            MHRD, Govt. of India)
+            <img src="img/user.png" onclick="makeImgFocus()" id="user"
+              height=100 width=100
+              style="position:absolute;top:40px;right:40px;border:1px solid
+              #000;" />
+            <input type="file" id="userFileInput" accept="image/png, image/jpeg"
+              onchange="assignImage(event)"
+              style="display:none;position:absolute;top:40px;right:40px;width:1px;"
+              />
+          </div>
+          <div
+            style="position:absolute;top:160px;width:100%;font-weight:bold;text-align:center;">APPLICATION
+            FORM FOR ALUMNI PORTAL MEMBERSHIP OF NIT, AP</div>
+          <hr style="width:90%;border:2px solid
+            #000;position:absolute;left:5%;top:190px;" />
+          <h4 style="top:192px;">PERSONAL DETAILS</h4>
+          <div style="position: absolute;top: 232px;left: 6%;">
+          <label for="fristname" style="top: 13px;">Frist Name</label>
+          <input type="text" id="fristname" name="fristname" title="fristname" style="top: 13px;left: 74px;width: 290px;">
+          <label for="middlename" style="
+            top: 13px;
+            left: 366px;
+            ">Middle Name</label>
+          <input type="text" id="middlename" name="middlename" title="middlename" style="
+            top: 13px;
+            left: 456px;
+            width: 250px;
+            ">
+          <label for="lastname" style="
+            top: 43px;
+            left: 0;
+            ">Last Name</label>
+          <input type="text" id="lastname" name="lastname" title="lastname" style="
+            top: 43px;
+            left: 72px;
+            width: 633px;
+            ">
+          <label for="rollno" style="
+            top: 79px;
+            left: 0;
+            ">Roll no</label>
+          <input type="text" id="rollno" name="rollno" title="rollno" style="
+            top: 77px;
+            left: 49px;
+            width: 658px;
+            ">
+          <label for="department" style="
+            top: 112px;
+            left: 0;
+            ">Department</label>
+          <input type="text" id="department" name="department" title="department" style="
+            top: 112px;
+            left: 76px;
+            width: 631px;
+            ">
+          <label for="startyear" style="
+            top: 144px;
+            /* left: 0; */
+            ">Start year</label>
+          <input type="text" id="startyear" name="startyear" title="startyear" style="
+            top: 144px;
+            left: 62px;
+            width: 300px;
+            ">
+          <label for="endyear" style="
+            top: 144px;
+            left: 365px;
+            ">End year</label>
+          <input type="text" id="endyear" name="endyear" title="endyear" style="
+            top: 144px;
+            left: 423px;
+            width: 282px;
+            ">
+          <label for="address" style="
+            top: 176px;
+            ">Address</label>
+          <input type="text" id="address" name="address" title="address" style="
+            top: 173px;
+            left: 57px;
+            width: 650px;
+            ">
 
-      <div style="position:absolute;top:160px;width:100%;font-weight:bold;text-align:center;">APPLICATION FORM FOR ALUMNI PORTAL MEMBERSHIP OF NIT, AP</div>
+          <input type="text" id="address1" name="address1" title="address1" style="top: 203px; left: 0px;width: 707px;"/>
 
-      <hr style="width:90%;border:2px solid #000;position:absolute;left:5%;top:190px;" />
 
-      <h4 style="top:192px;">PERSONAL DETAILS</h4>
-    </page>
+          <label for="pincode" style="
+            top: 234px;
+            ">Pin Code</label>
+          <input type="text" id="pincode" name="pincode" title="pincode" style="
+            top: 234px;
+            left: 64px;
+            width: 645px;
+            ">
+          <label for="sociallink1" style="
+            top: 269px;
+            ">Social link 1</label>
+          <input type="text" id="sociallink1" name="sociallink1" title="sociallink1" style="
+            top: 268px;
+            left: 82px;
+            width: 287px;
+            ">
+          <label for="sociallink2" style="
+            top: 269px;
+            left: 371px;
+            ">Social Link 2</label>
+          <input type="text" id="sociallink2" name="sociallink2" title="sociallink2" style="
+            top: 268px;
+            left: 452px;
+            width: 257px;
+            ">
+          <label for="phoneno1" style="
+            top: 303px;
+            ">Phone 1</label>
+          <input type="text" id="phoneno1" name="phoneno1" title="phoneno1" style="
+            top: 303px;
+            left: 73px;
+            width: 287px;
+            ">
+          <label for="phoneno2" style="
+            top: 303px;
+            left: 363px;
+            ">Phone 2</label>
+          <input type="text" id="phoneno2" name="phoneno2" title="phoneno2" style="
+            top: 303px;
+            left: 436px;
+            width: 274px;
+            ">
+          <label for="email1" style="
+            top: 336px;
+            ">Email 1</label>
+          <input type="text" id="email1" name="email1" title="email1" style="
+            top: 336px;
+            left: 67px;
+            width: 295px;
+            ">
+          <label for="email2" style="
+            top: 336px;
+            left: 363px;
+            ">Email 2</label>
+          <input type="text" id="email2" name="email2" title="email2" style="
+            top: 336px;
+            left: 429px;
+            width: 280px;
+            ">
+          <label for="parentphoneno" style="
+            top: 369px;
+            ">Parent no:</label>
+          <input type="text" id="parentphoneno" name="parentphoneno" title="parentphoneno" style="
+            top: 369px;
+            left: 109px;
+            width: 602px;
+            ">
+          <label for="currentcity" style="
+            top: 400px;
+            ">Current City:</label>
+          <input type="text" id="currentcity" name="currentcity" title="currentcity" style="
+            top: 400px;
+            left: 83px;
+            width: 628px;
+            ">
+          <label for="currentstate" style="
+            top: 430px;
+            ">Current State:</label>
+          <input type="text" id="currentstate" name="currentstate" title="currentstate" style="
+            top: 430px;
+            left: 94px;
+            width: 618px;
+            ">
 
-  </body>
-  <script>
+
+            <label for="signature" style="top:600px;font-size:20px;" >Student Signature</label>
+            <label for="signature" style="top:600px;font-size:20px;left:620px;" >Date</label>
+
+        </div>
+        </page>
+
+      </body>
+      <script>
 
      function pdfNow(){
        window.print();
@@ -79,5 +288,22 @@
        reader.readAsDataURL(img.files[0]);
      }
 
+     function centerForm(){
+        var hold = document.getElementById("myform");
+        var parentSize = hold.parentElement.offsetWidth;
+        var size = (parentSize - hold.offsetWidth)/2;
+
+        hold.style.left = size + "px";
+     }
+
+
+     window.onload = function(){
+       centerForm();
+     }
+
+     window.onresize = function(){
+       centerForm();
+     }
+
   </script>
-</html>
+    </html>
