--- a/user/logged.html
+++ b/user/logged.html
@@ -41,14 +41,15 @@
 
           <div id="articleSection1Search">
 
+
             <select name="data_dept" id="data_dept">
               <option value="">Select Department</option>
-              <option value="cse">Computer Science Engineering</option>
-              <option value="me">Mechenical Engineering</option>
-              <option value="civil">Civil Engineering</option>
-              <option value="ece">Electronic and Electrical Engineering </option>
-              <option value="ee">Electronic Engineering</option>
-              <option value="bio">Biotechnology</option>
+              <option value="CSE">Computer Science Engineering</option>
+              <option value="ME">Mechenical Engineering</option>
+              <option value="CE">Civil Engineering</option>
+              <option value="ECE">Electronic and Electrical Engineering </option>
+              <option value="EE">Electronic Engineering</option>
+              <option value="BE">Biotechnology</option>
             </select>
 
             <select name="data_year" id="data_year">
@@ -58,7 +59,7 @@
             <input type="number" name="data_rollno" id="data_rollno" placeholder="Roll No." />
 
             <input type="text" name="data_name" id="data_name" placeholder="Name" />
-            <button id="data_button">Search</button>
+            <button id="data_button" onclick="fetch()">Search</button>
 
           </div>
 
@@ -136,5 +137,12 @@
   </script>
   <script src="main.js"></script>
   <script src="fetch.js"></script>
+
+  <script>
+    function fetch(){
+      var f = new fetchData;
+      f.sendData();
+    }
+  </script>
 
 </html>
