--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
 
     <script src="user/ajax.js" id="testHide1"></script>
     <script src="encodeCred.js" id="testHide2"></script>
+    <script src="register.js"></script>
 
 
     <link rel="icon" href="img/titlelogo.png" type="image/x-icon"/>
@@ -72,6 +73,9 @@
          <h3 style="color:rgb(121,119,120);">NIT Arunachal Pradesh</h3>
        </div>
 
+      
+       <button onclick="register()">Register</button>
+
     </header>
 
    <nav id="registerNav">
@@ -110,7 +114,7 @@
       <div style="position:absolute;top:242px;left:6%;height:200px;width:90%;">
 
         <label for="fristname" style="top:13px;">First Name :</label>
-        <input type="text" id="fristname" name="fristname" title="fristname" style="top:13px;left:74px;width:258px;">
+        <input type="text" id="firstname" name="firstname" title="fristname" style="top:13px;left:74px;width:258px;">
 
         <label for="middlename" style="top:13px;left:366px;">Middle Name :</label>
         <input type="text" id="middlename" name="middlename" title="middlename" style="top:13px;left:456px;width:244px;">
@@ -136,11 +140,11 @@
 
         <label for="address1" style="top:13px;">Address 1 :</label>
         <input type="text" id="address1" name="address1one" style="top:13px;left:64px;width:635px;">
-        <input type="text" id="address1" name="address1" title="address1" style="top:45px;left:-12px;width:711px;"/>
+        <input type="text" id="address12" name="address1" title="address1" style="top:45px;left:-12px;width:711px;"/>
 
         <label for="address2" style="top:77px;">Address 2 :</label>
-        <input type="text" id="address2" name="address1one" style="top:77px;left:64px;width:635px;">
-        <input type="text" id="address2" name="address1" style="top:109px;left:-12px;width:711px;"/>
+        <input type="text" id="address2" name="address2one" style="top:77px;left:64px;width:635px;">
+        <input type="text" id="address22" name="address2" style="top:109px;left:-12px;width:711px;"/>
 
         <label for="pincode" style="top:141px;">Pincode :</label>
         <input type="text" id="pincode" name="pincode" title="pincode" style="top:141px;left:51px;width:648px;">
@@ -173,7 +177,7 @@
         <input type="text" id="currentstate" name="currentstate" title="currentstate" style="top:330px;left:81px;width:618px;">
 
         <label for="signature" style="top:500px;font-size:20px;" >Student Signature</label>
-        <label for="signature" style="top:500px;font-size:20px;left:660px;" >Date</label>
+        <label for="Date" style="top:500px;font-size:20px;left:660px;" >Date</label>
 
         </div>
         </page>
