--- a/user/logged.html
+++ b/user/logged.html
@@ -140,8 +140,9 @@
 
   <script>
     function fetch(){
-      var f = new fetchData;
-      f.sendData();
+		clearFetchArea();
+		var f = new fetchData;
+		f.sendData();
     }
   </script>
 
