User feature added

--- a/register.html
+++ b/register.html
@@ -200,23 +200,23 @@
         <label for="department" style="top:112px;left:0px;">Department :</label>
         <input type="text" id="department" list="depttypes" name="department" title="department" style="top:112px;left:76px;width:256px;">
         <datalist id="depttypes">
-          <option>Computer Science & Engineering</option>
-          <option>Civil Engineering</option>
-          <option>Biotech Engineering</option>
-          <option>Chemical Engineering</option>
-          <option>Mechenical Engineering</option>
-          <option>Electrical Engineering</option>
-          <option>Electronics & Communication Engineering</option>
+          <option value="CSE">Computer Science & Engineering</option>
+          <option value="Civil">Civil Engineering</option>
+          <option value="Bio">Biotech Engineering</option>
+          <option value="chem">Chemical Engineering</option>
+          <option value="ME">Mechenical Engineering</option>
+          <option value="EE">Electrical Engineering</option>
+          <option value="ECE">Electronics & Communication Engineering</option>
         </datalist>
 
         <label for="degree" style="top:112px;left:365px;">Degree :</label>
         <input type="text" id="degree" list="degreetypes" name="department" title="degree" style="top:112px;left:410px;width:289px;">
           <datalist id="degreetypes">
-            <option>BTech</option>
-            <option>MTech</option>
-            <option>PHD</option>
-            <option>MBA</option>
-            <option>MS</option>
+            <option value="BTech">BTech</option>
+            <option value="MTech">MTech</option>
+            <option value="PHD">PHD</option>
+            <option value="MBA">MBA</option>
+            <option value="MS">MS</option>
           </datalist>
 
         <label for="startyear" style="top:144px;">Start year :</label>
