--- a/user/logged.html
+++ b/user/logged.html
@@ -52,8 +52,17 @@
               <option value="BE">Biotechnology</option>
             </select>
 
+            <select name="data_degree" id="data_degree">
+              <option value="">Degree</option>
+              <option value="BTech">BTech</option>
+              <option value="MTech">MTech</option>
+              <option value="PHD">PHD</option>
+              <option value="MBA">MBA</option>
+              <option value="MS">MS</option>
+            </select>
+
             <select name="data_year" id="data_year">
-              <option value="">Year</option>
+              <option value="">End Year</option>
             </select>
 
             <input type="number" name="data_rollno" id="data_rollno" placeholder="Roll No." />
